// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MolocoRmp's addToCart destination action: all fields 1`] = `
Object {
  "channel_type": "2Tz2Ek0OF",
  "device": Object {
    "advertising_id": "2Tz2Ek0OF",
    "ip": "2Tz2Ek0OF",
    "language": "2Tz2Ek0OF",
    "model": "2Tz2Ek0OF",
    "os": "2TZ2EK0OF",
    "os_version": "2Tz2Ek0OF",
    "ua": "2Tz2Ek0OF",
    "unique_device_id": "2Tz2Ek0OF",
  },
  "event_type": "ADD_TO_CART",
  "id": "2Tz2Ek0OF",
  "items": Array [
    Object {
      "id": "2Tz2Ek0OF",
      "price": Object {
        "amount": -35340104037826.56,
        "currency": "INR",
      },
      "quantity": -3534010403782656,
      "seller_id": "2Tz2Ek0OF",
    },
  ],
  "page_id": "2Tz2Ek0OF",
  "session_id": "2Tz2Ek0OF",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "2Tz2Ek0OF",
}
`;

exports[`Testing snapshot for MolocoRmp's addToCart destination action: required fields 1`] = `
Object {
  "channel_type": "2Tz2Ek0OF",
  "event_type": "ADD_TO_CART",
  "id": "2Tz2Ek0OF",
  "items": Array [
    Object {
      "id": "2Tz2Ek0OF",
    },
  ],
  "page_id": "2Tz2Ek0OF",
  "session_id": "2Tz2Ek0OF",
  "timestamp": "2021-02-01T00:00:00.000Z",
  "user_id": "2Tz2Ek0OF",
}
`;
